--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Simon Says</title>
+  <title>Simón Dice</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 
 <body>
-  <h1 id="level-title">Press Start</h1>
+  <h1 id="level-title">Pulsa "Empezar"</h1>
 
   <div class="explainer">
-    <h2>Don't know how to play?</h2>
+    <h2>¿No sabes cómo jugar?</h2>
 
-    <p>You have to memorise the colors Simon highlights and follow the pattern. Otherwise, GAME OVER!</p>
+    <p>Simón te mostrará un color, debes memorizar la secuencia para continuar el juego, sino FIN DE LA PARTIDA!</p>
 
 
-    <button type="button" class="goButton">START</button>
+    <button type="button" class="goButton">EMPEZAR</button>
     </div>
   <div class="container">
     <div class="row">
