--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Simón Dice</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <link rel="icon" href="puzzle.png">
 </head>
 
 <body>
